--- a/src/index.css
+++ b/src/index.css
@@ -7,32 +7,87 @@
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh; /* Assure que le body occupe au moins la hauteur de l'écran */
 }
 
 #root {
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     max-width: 1240px;
+    margin: 0 auto; /* Centre le contenu avec une largeur maximale */
 }
+
+/* HEADER */
 
 .header {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    background-color: grey;
     align-items: center;
     height: 68px;
-    margin-top: 30px;
+    margin: 30px 10px;
 }
 
 nav ul {
     display: flex;
 }
 
+ul a {
+    text-decoration: none;
+    color: black;
+}
+
+ul a.underline {
+    text-decoration: underline;
+}
+
 ul li {
     list-style: none;
     font-size: 24px;
     margin-left: 20px;
+}
+
+/* HEADER */
+
+@media (max-width: 768px) {
+    .header img {
+        height: 46px;
+    }
+
+    ul li {
+        font-size: 12px;
+        margin-left: 18px;
+        text-transform: uppercase;
+    }
+
+    ul {
+        padding-left: 0;
+    }
+}
+
+/* FOOTER */
+
+.footer {
+    position: relative;
+    width: 100vw;
+    left: 50%; 
+    margin-left: -50vw; 
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+    box-sizing: border-box;
+}
+
+.footer img {
+    height: 40px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.footer p {
+    font-size: 24px;
 }
