--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,6 @@
 .footer {
     position: relative;
-    width: 100vw;
-    left: 50%; 
-    margin-left: -50vw; 
+    width: 100%;
     background-color: black;
     color: white;
     display: flex;
@@ -20,4 +18,10 @@
 
 .footer p {
     font-size: 24px;
+}
+
+@media (max-width: 768px) {
+   .footer p {
+    font-size: 12px;
+   }
 }
