--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,7 +5,8 @@
     align-items: center;
     height: 68px;
     margin: 30px auto;
-    width: 100%;
+    max-width: 1240px;
+    padding: 0 20px; /* Adds 10px space on both sides */
 }
 
 nav ul {
@@ -25,4 +26,20 @@ ul li {
     list-style: none;
     font-size: 24px;
     margin-left: 20px;
+}
+
+@media (max-width: 768px) {
+    .header img {
+        height: 46px;
+    }
+
+    ul li {
+        font-size: 12px;
+        margin-left: 18px;
+        text-transform: uppercase;
+    }
+
+    ul {
+        padding-left: 0;
+    }
 }
