--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@
     height: 68px;
     margin: 30px auto;
     max-width: 1240px;
-    padding: 0 20px; /* Adds 10px space on both sides */
+    padding: 0 20px;
 }
 
 nav ul {
