--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,7 +1,7 @@
 
 
 .cardsContainer a {
-    width: 30%;
+    width: 31%;
     height: 340px;
     margin-bottom: 20px;
     text-decoration: none;
@@ -12,11 +12,11 @@
 article {
     display: flex;
     width: 100%;  
+    position: relative;
 }
 
 .imgLogement {
-    width: 27%;
-    max-width: 340px;
+    width: 100%;
     height: 340px;
     border-radius: 10px;
     object-fit: cover;
@@ -27,8 +27,7 @@ article {
     height: 100%;
     background-color: black;
     position: absolute;
-    width: 27%;
-    max-width: 340px;
+    width: 100%;
     height: 340px;
     border-radius: 10px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
@@ -51,6 +50,7 @@ h2 {
 
 
 @media (max-width: 768px) {
+
     .cardsContainer a {
         width: 100%;
         height: 255px;
