nom et rating fini desktop

--- a/src/pages/logement/logement.css
+++ b/src/pages/logement/logement.css
@@ -5,6 +5,10 @@
 }
 
 .ProprioNote {
-    background-color: red;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+
 }
